@@ -3340,7 +3340,7 @@ TclTraceExecutionObjCmd(interp, optionIndex, objc, objv)
 		    flags |= (TCL_TRACE_ENTER_EXEC | 
 			      TCL_TRACE_LEAVE_EXEC);
 		}
-		strcpy(tcmdPtr->command, command);
+		memcpy(tcmdPtr->command, command, length + 1);
 		name = Tcl_GetString(objv[3]);
 		if (Tcl_TraceCommand(interp, name, flags, TraceCommandProc,
 			(ClientData) tcmdPtr) != TCL_OK) {
@@ -3572,7 +3572,7 @@ TclTraceCommandObjCmd(interp, optionIndex, objc, objv)
 		tcmdPtr->length = length;
 		tcmdPtr->refCount = 1;
 		flags |= TCL_TRACE_DELETE;
-		strcpy(tcmdPtr->command, command);
+		memcpy(tcmdPtr->command, command, length + 1);
 		name = Tcl_GetString(objv[3]);
 		if (Tcl_TraceCommand(interp, name, flags, TraceCommandProc,
 			(ClientData) tcmdPtr) != TCL_OK) {
@@ -3791,7 +3791,7 @@ TclTraceVariableObjCmd(interp, optionIndex, objc, objv)
 		}
 		tvarPtr->length = length;
 		flags |= TCL_TRACE_UNSETS | TCL_TRACE_RESULT_OBJECT;
-		strcpy(tvarPtr->command, command);
+		memcpy(tvarPtr->command, command, length + 1);
 		name = Tcl_GetString(objv[3]);
 		flagMask = TCL_GLOBAL_ONLY | TCL_NAMESPACE_ONLY;
 		varPtr = TclLookupVar(interp, name, NULL,
